auth and job
